# vidsort

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: classifier.rs  config.rs  fetcher.rs  lib.rs  linker.rs  listener.rs  main.rs  metrics.rs  pipeline.rs  report.rs  server.rs  transmission.rs  tvdb.rs  types.rs
src/parser/: mod.rs  movie.rs  tvshow.rs
