[package]
name = "vidsort"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
humantime = "0.1.3"
eyre = "0.6.12"
axum = { version = "0.8.8", default-features = false, features = [
  "macros",
  "tracing",
] }
axum-server = { version = "0.8.0", default-features = false, features = [
  "arc-swap",
] }
camino = "1.2.2"
clap = { version = "4.6.0", features = ["cargo", "derive", "env", "string"] }
itertools = "0.14.0"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
nix = { version = "0.31.2", default-features = false, features = ["fs"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "http2",
  "json",
  "query",
  "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.51.1", features = [
  "fs",
  "io-util",
  "parking_lot",
  "rt",
  "signal",
  "time",
  "tracing",
] }
tokio-util = { version = "0.7.15", default-features = false }
tracing-error = "0.2.1"
tracing = { version = "0.1.44", features = [
  "async-await",
  "log",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.23", features = [
  "parking_lot",
  "env-filter",
  "registry",
  "fmt",
  "ansi",
  "json",
], default-features = false }
transmission-rpc = "0.5.0"
futures = "0.3.32"
url = "2.5.8"
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1"
sled = "0.34"
human_bytes = "0.4.3"

[dev-dependencies]
tempfile = "3"
